# Transmorpher

./: .gitignore  README.md
StealthMorpher/: CMakeLists.txt  build.sh
StealthMorpher/src/: Hooks.cpp  Hooks.h  Morpher.cpp  Morpher.h  SpellMorph.cpp  SpellMorph.h  Utils.cpp  Utils.h  WoWOffsets.h  dllmain.cpp
Transmorpher/: Transmorpher.toc  protected_spells.txt
Transmorpher/Core/: Constants.lua  DLLBridge.lua  EventLoop.lua  MountManager.lua  State.lua
Transmorpher/UI/: MainFrame.lua
Transmorpher/UI/Tabs/: LoadoutsTab.lua  MiscTab.lua  PreviewTab.lua  SettingsTab.lua
Transmorpher/db/: TitlesDB.lua
